--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <title>Number Guesser</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="game-container">
