--- a/index.html
+++ b/index.html
@@ -60,5 +60,7 @@
         <p>Click "Next Round" to play again.</p>
       </div>
     </div>
+    <script src="./script.js"></script>
+    <script src="./game.js"></script>
   </body>
 </html>
